Refactor code
---

 * Add redis docker container
 * Setup xdebug in docker
 * Create BaseController and ControllerInterface
 * Create logout and refresh token endpoints
 * Update composer dependencies
 * Update swagger documentation
